--- a/thesis.bib
+++ b/thesis.bib
@@ -550,7 +550,7 @@ year = "1998"
 }
 
 @article{nelson1992,
-  title     = {Qualitative recognition of motion using temporal textures},
+  title     = {Qualitative recognition of motion using temporal texture},
   author    = {Nelson, R. and Polana, R.},
   journal   = CVGIP,
   volume = {56},
