Working on Chapter 3

--- a/introduction.tex
+++ b/introduction.tex
@@ -94,7 +94,7 @@ are effectively independent.
 Similarly, the two-stream hypothesis \cite{goodale1992} models the 
 human visual cortex in terms of two pathways, the ventral stream
 (involved with object recognition) and the
-dorsal stream (involved with motion processing).
+dorsal stream (involved with motion processing). Two-stream networks have also been used for video understanding tasks in computer vision, with particular attention to action recognition \cite{simonyan2014,feichtenhofer2016two}.
 
 In this thesis, the two-stream analysis of
 dynamic textures is applied to texture synthesis.
@@ -112,6 +112,8 @@ Finally, the perceived realism of the generated textures is validated
 through an extensive user study.
 
 \section{Contributions}
+
+\todomatthew{split contributions into a numbered list}
 
 The contributions of this work span both theory and application. First,
 theoretical insight into the characterization of dynamic textures is provided by 
