--- a/related_work.tex
+++ b/related_work.tex
@@ -1,4 +1,4 @@
-\chapter{Related work \todomatthew{unfinished}}
+\chapter{Related work \todomatthew{unfinished}} \label{chap:related_work}
 
 There are two general approaches that have dominated the texture
 synthesis literature: non-parametric sampling approaches that
