--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,14 @@
+@inproceedings{ulyanov2017,
+  author    = {Dmitry Ulyanov and
+               Andrea Vedaldi and
+               Victor S. Lempitsky},
+  title     = {Improved Texture Networks: Maximizing Quality and Diversity in Feed-Forward
+               Stylization and Texture Synthesis},
+  booktitle = CVPR,
+  pages     = {4105--4113},
+  year      = {2017}
+}
+
 @article{gibson1950perception,
   title		= {The Perception of the Visual World},
   author	= {James J. Gibson},
