Chapter 3 text draft finished

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,6 +1,6 @@
-\input{fig_successes}
+\chapter{Evaluation \todomatthew{haven't touched yet}}\label{chap:evaluation}
 
-\chapter{Evaluation \todomatthew{haven't touched yet}}\label{empirical_evaluation}
+\input{fig_successes}
 
 The goal of (dynamic) texture synthesis is to generate 
 samples that are indistinguishable from the real input target
