--- a/fig_MSOEnet.tex
+++ b/fig_MSOEnet.tex
@@ -5,9 +5,9 @@
 \vspace{-0.45cm}
 \caption[Dynamics stream ConvNet.]{Dynamics stream ConvNet. The ConvNet is based on a
 spacetime-oriented energy model
-\cite{derpanis2012spacetime, simoncelli1998} and will be trained
+\cite{derpanis2012spacetime, simoncelli1998} and is trained
 for optical flow prediction.
 Three scales are shown for illustration;
-in practice five scales will be used.}
+in practice five scales are used.}
 \label{fig:MSOE}
 \end{figure}
